--- a/src/BookAdvisor.API/BookAdvisor.API.csproj
+++ b/src/BookAdvisor.API/BookAdvisor.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>046d9ffa-0a73-4dec-b806-873af1822481</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
