--- a/src/BookAdvisor.Application/BookAdvisor.Application.csproj
+++ b/src/BookAdvisor.Application/BookAdvisor.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\BookAdvisor.Domain\BookAdvisor.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
