--- a/src/BookAdvisor.Infrastructure/BookAdvisor.Infrastructure.csproj
+++ b/src/BookAdvisor.Infrastructure/BookAdvisor.Infrastructure.csproj
@@ -11,6 +11,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.SemanticKernel.Abstractions" Version="1.69.0" />
+    <PackageReference Include="Microsoft.SemanticKernel.Connectors.Google" Version="1.69.0-alpha" />
+    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.69.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
   </ItemGroup>
 
