--- a/src/BookAdvisor.Application/BookAdvisor.Application.csproj
+++ b/src/BookAdvisor.Application/BookAdvisor.Application.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.2" />
+     <PackageReference Include="MassTransit.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
