feat(auth): Identity core ve JWT altyapısı kuruldu.
- Infrastructure: Microsoft.AspNetCore.Identity entegrasyonu ve ApplicationUser tablosu eklendi.
- Infrastructure: BYOK (Bring Your Own Key) için AiKeyProvider ve şifreli key altyapısı hazırlandı.
- Application: IIdentityService ve IAiKeyProvider arayüzleri tanımlandı.
- API: JWT Token üretimi (Login) ve Kullanıcı Kaydı (Register) endpointleri açıldı.
- Fix: Middleware sıralaması (AuthN -> AuthZ) düzeltildi.
- Refactor: Namespace çakışmaları giderildi.

--- a/src/BookAdvisor.API/appsettings.json
+++ b/src/BookAdvisor.API/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Port=5432;Database=BookAdvisorDb;User Id=admin;Password=password;"
+    },
+    "JwtSettings": {
+        "Secret": "BuProjeIcinCokGizliVeUzunBirAnahtar_BookAdvisor_2026",
+        "Issuer": "BookAdvisorAPI",
+        "Audience": "BookAdvisorClient"
     }
 }
